// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nested google/api/expr/v1alpha1/checked 1`] = `
Object {
  "amino": Object {},
  "proto": Object {
    "DeepPartial": true,
    "Exact": true,
    "Long": true,
    "_m0": true,
    "isObject": true,
    "isSet": true,
  },
}
`;

exports[`services osmosis/gamm/v1beta1/tx 1`] = `
Object {
  "amino": Object {},
  "proto": Object {
    "DeepPartial": true,
    "Exact": true,
    "Long": true,
    "_m0": true,
    "isSet": true,
  },
}
`;

exports[`services osmosis/lockup/tx 1`] = `
Object {
  "amino": Object {},
  "proto": Object {
    "DeepPartial": true,
    "Exact": true,
    "Long": true,
    "_m0": true,
    "fromDuration": true,
    "isSet": true,
    "toDuration": true,
  },
}
`;

exports[`utils cosmos/staking/v1beta1/tx 1`] = `
Object {
  "amino": Object {},
  "proto": Object {
    "DeepPartial": true,
    "Exact": true,
    "_m0": true,
    "fromJsonTimestamp": true,
    "fromTimestamp": true,
    "isSet": true,
    "toTimestamp": true,
  },
}
`;
